--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -4,6 +4,7 @@ contourpy==1.3.3
 cycler==0.12.1
 Django==6.0
 django-cors-headers==4.9.0
+django-filter==25.2
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 dotenv==0.9.9
@@ -22,6 +23,7 @@ plotly==6.5.0
 PyJWT==2.10.1
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 python-dotenv==1.2.1
 pytz==2025.2
 scikit-learn==1.7.2
